test/zinc_source/compile_errors/structs/16_spread_non_struct.zn
// expected-error: spread expects a struct value

struct Config {
    value: i64
}

fn main() {
    config = Config { ..1 }
    print(config.value)
}
